--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,199 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="RtlCompat"
-	android:layout_height="match_parent"
-	android:layout_width="match_parent"
-	android:animateLayoutChanges="true">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
+    android:orientation="vertical"
+    tools:ignore="RtlCompat" >
 
-	<com.google.android.material.appbar.AppBarLayout
-		android:layout_height="56dp"
-		android:layout_width="match_parent"
-		android:gravity="center"
-		android:id="@+id/appbar"
-		android:background="?attr/colorPrimaryDark"
-		app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
+        android:background="?attr/colorPrimaryDark"
+        android:gravity="center" >
 
-		<RelativeLayout
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content">
-            
-			<TextView
-				android:layout_height="wrap_content"
-				android:layout_width="match_parent"
-				android:text="@string/app_name"
-				android:textStyle="bold"
-				android:gravity="center"
-				android:textColor="@color/primaryTextColor"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:id="@+id/toolbar_header"
-				android:textSize="24sp"
-				android:layout_centerInParent="true"
-				android:clickable="false"
-				android:focusable="false"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-		</RelativeLayout>
+            <TextView
+                android:id="@+id/toolbar_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:clickable="false"
+                android:focusable="false"
+                android:gravity="center"
+                android:text="@string/app_name"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/primaryTextColor"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
-	</com.google.android.material.appbar.AppBarLayout>
-    
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/real_container"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:src="@mipmap/ic_launcher"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_margin="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.25"
-            android:id="@+id/main_image"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/get_started"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textStyle="bold"
-            android:textColor="@color/primaryTextColor"
-            android:layout_margin="4dp"
-            app:layout_constraintTop_toBottomOf="@id/main_image"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/getStarted"/>
-
-        <TextView
-            android:id="@+id/greetingText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/msg_create_new_project_greeting"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/primaryTextColorLight"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintTop_toBottomOf="@id/getStarted"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-        
-        <Button
-            android:id="@+id/create_project"
-            android:layout_height="56dp"
-            android:layout_width="wrap_content"
-            android:gravity="center_vertical"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:text="@string/msg_create_new_project"
-            android:singleLine="true"
-            android:ellipsize="end"
-            android:textColor="@color/primaryTextColor"
-            android:elevation="0dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp"
-            android:textAlignment="center"
-            app:layout_constraintTop_toBottomOf="@id/greetingText"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:rippleColor="@color/rippleHighlightColor"
-            app:icon="@drawable/ic_add"
-            app:iconPadding="8dp"
-            app:iconTint="@color/primaryTextColor"
-            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>
-        
-        <Button
-            android:id="@+id/open_project"
-            android:layout_height="56dp"
-            android:layout_width="wrap_content"
-            android:gravity="center_vertical"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:text="@string/msg_open_existing_project"
-            android:singleLine="true"
-            android:ellipsize="end"
-            android:textColor="@color/primaryTextColor"
-            android:elevation="0dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:textAlignment="center"
-            app:layout_constraintTop_toBottomOf="@id/create_project"
-            app:layout_constraintStart_toStartOf="@id/create_project"
-            app:rippleColor="@color/rippleHighlightColor"
-            app:icon="@drawable/ic_folder"
-            app:iconPadding="8dp"
-            app:iconTint="@color/primaryTextColor"
-            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>
-        
-        <Button
-            android:id="@+id/open_terminal"
-            android:layout_height="56dp"
-            android:layout_width="wrap_content"
-            android:gravity="center_vertical"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:text="@string/btn_terminal"
-            android:singleLine="true"
-            android:ellipsize="end"
-            android:textColor="@color/primaryTextColor"
-            android:elevation="0dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:textAlignment="center"
-            app:layout_constraintTop_toBottomOf="@id/open_project"
-            app:layout_constraintStart_toStartOf="@id/create_project"
-            app:rippleColor="@color/rippleHighlightColor"
-            app:icon="@drawable/ic_terminal"
-            app:iconPadding="8dp"
-            app:iconTint="@color/primaryTextColor"
-            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>
-        
-        <Button
-            android:id="@+id/goto_preferences"
-            android:layout_height="56dp"
-            android:layout_width="wrap_content"
-            android:gravity="center_vertical"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:text="@string/msg_preferences"
-            android:singleLine="true"
-            android:ellipsize="end"
-            android:textColor="@color/primaryTextColor"
-            android:elevation="0dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:textAlignment="center"
-            app:layout_constraintTop_toBottomOf="@id/open_terminal"
-            app:layout_constraintStart_toStartOf="@id/create_project"
-            app:rippleColor="@color/rippleHighlightColor"
-            app:icon="@drawable/ic_settings"
-            app:iconPadding="8dp"
-            app:iconTint="@color/primaryTextColor"
-            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/createNewCard"
-            android:layout_height="0dp"
-            android:layout_width="0dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:cardBackgroundColor="@color/primaryLightColor"
-            app:cardElevation="8dp"
-            style="@style/CreateProjectCardView">
-
-            <include
-                android:id="@+id/createLayout"
-                layout="@layout/layout_create_project"/>
-
-        </com.google.android.material.card.MaterialCardView>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</LinearLayout>
